# react-fatapi-tutorial

notesapp/: main.py  pyproject.toml
notesapp/src/database/: db.py  models.py
notesapp/src/scemas/: notes.py
